--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
