--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.20",
+    "@mui/material": "^5.15.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
@@ -29,6 +29,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "react-social-login-buttons": "^3.9.1",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1"
   },
