--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui-treasury/layout": "^5.0.0",
+    "@mui-treasury/mockup": "^1.2.12",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.15.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
