--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^10.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
